--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <p>linea inicial</p>
+    <p>Aqui habra conflicto</p>
     <p>inicia segunda rama</p>
     <p>rama 2 distinta</p>
   </body>
