--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <p>linea inicial</p>
     <p>inicia segunda rama</p>
+
+    <p>esto es una modificacion en local en la rama main</p>
   </body>
 </html>
