--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <p>Aqui habra conflicto</p>
     <p>inicia segunda rama</p>
     <p>rama 2 distinta</p>
+    
+    <p>Esto es una modificacion en el servidor y vamos a ir a local</p>
   </body>
 </html>
