--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <p>Aqui habra conflicto</p>
     <p>inicia segunda rama</p>
     <p>rama 2 distinta</p>
-    
+
     <p>Esto es una modificacion en el servidor y vamos a ir a local</p>
+
+    <p>Vamos a cambiar esto para hacer un merge con la rama 3</p>
   </body>
 </html>
